MASTER: Agrega botones del juego

--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle</title>
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="./scripts.js"></script>
 </head>
 <body>
     <header>
+            <div class="header">EXAMEN FINAL LPPA</div>
+            <div class="header">WORDLE</div>
+            <div id="buttons">
+                <button id="nueva-partida" class="button-nav">Nueva Partida</button>
+                <button id="cargar-partida" class="button-nav">Cargar Partida</button>
+                <button id="guardar-partida" class="button-nav">Guardar Partida</button>
+                <button id="contactanos" class="button-nav"><a href="./HTML/contacto.html">Contactanos</a></button>
+            </div>
     </header>
     <main>
         <form>
