MASTER: Menu y referencias a botones

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
             <div class="header">EXAMEN FINAL LPPA</div>
             <div class="header">WORDLE</div>
             <div id="buttons">
-                <button id="nueva-partida" class="button-nav">Nueva Partida</button>
+                <button id="nueva-partida" onclick="user()"; class="button-nav">Nueva Partida</button>
                 <button id="cargar-partida" class="button-nav">Cargar Partida</button>
                 <button id="guardar-partida" class="button-nav">Guardar Partida</button>
                 <button id="contactanos" class="button-nav"><a href="./HTML/contacto.html">Contactanos</a></button>
+            </div>
+            <div id="timer">
+                Tenés <span id="time">05:00</span> minutos para resolver la palabra!
             </div>
     </header>
     <main>
@@ -65,6 +68,7 @@
                 <input id="f5c4" type="text" minlength="1" maxlength="1" autocomplete="off">
             </fieldset>
         </form>
+</div>
     </main>
     <aside>
     </aside>
