--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
     </header>
     <main>
-        <form>
+        <form id="grilla">
             <fieldset id="fila0">
                 <input id="f0c0" type="text" minlength="1" maxlength="1" autocomplete="off" autofocus onkeyup="return tabular(this, this.maxLength)"/> <!-- onkeyup="if (this.value.length == this.getAttribute('maxlength')) txt.focus()" /> -->
                 <input id="f0c1" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
