MASTER: Agrega funcion borrar

--- a/index.html
+++ b/index.html
@@ -7,85 +7,94 @@
     <title>Wordle</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
-    <script src="./scripts.js"></script>
+    <script src="scripts.js"></script>
 </head>
 <body>
     <header>
-            <div class="header">EXAMEN FINAL LPPA</div>
-            <div class="header">WORDLE</div>
-            <div id="buttons">
-                <button id="reset" onclick="user()"; class="button-nav">Jugar de Nuevo</button>
-                <button id="nueva-partida" onclick="user()"; class="button-nav">Nueva Partida</button>
-                <button id="cargar-partida" class="button-nav">Cargar Partida</button>
-                <button id="guardar-partida" class="button-nav">Guardar Partida</button>
-                <button id="contactanos" class="button-nav"><a href="contacto.html">Contactanos</a></button>
-                <button id="tablero" onclick="mostrarModal()"; class="button-nav">Scoreboard</button>
+        <h1 class="header">EXAMEN FINAL LPPA</h1>
+        <h2 class="header">
+            <a class="header" href="./index.html">WORDLE</a>
+        </h2>
+        <div id="buttons">
+            <button id="nueva-partida" class="button-nav">Nueva Partida</button>
+            <button id="cargar-partida" class="button-nav">Cargar Partida</button>
+            <button id="guardar-partida" class="button-nav">Guardar Partida</button>
+            <button id="volver-a-jugar-partida" class="button-nav">Volver a Jugar</button>
+            <button id="ranking-partida" class="button-nav">Ranking</button>
+            <button id="contactanos" class="button-nav"><a href="/HTML/contacto.html">Contactanos</a></button>
+        </div>
+        <form name="formulario" id="formulario-usuario">
+            <div id="nombre-jugador">
+                <label id="nombre-jugador-label" for="nombre">INGRESE SU NOMBRE</label>
+                <input type="text" name="nombre-jugador" id="nombre-jugador-input">
+                <p id="errorNombre"></p>
             </div>
-            <div id="timer">
-                Tenés <span id="time">05:00</span> minutos para resolver la palabra!
-            </div>
+        </form>
+
+        <div id="timer">Tenés <span id="time">05:00</span> minutos para resolver la palabra!</div>
+        <div id="mensaje-resultado"></div>
+        <div id="mensaje-error">Introduzca solo letras mayusculas</div>
     </header>
     <main>
         <form id="grilla">
-            <fieldset id="fila0">
-                <input id="f0c0" type="text" minlength="1" maxlength="1" autocomplete="off" autofocus onkeyup="return tabular(this, this.maxLength)"/> <!-- onkeyup="if (this.value.length == this.getAttribute('maxlength')) txt.focus()" /> -->
-                <input id="f0c1" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f0c2" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f0c3" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f0c4" type="text" minlength="1" maxlength="1" autocomplete="off">
+            <fieldset id="fila0" class="fieldset-wordle" disabled>
+                <input id="f0c0" class="input-wordle" maxlength="1"/>
+                <input id="f0c1" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f0c1.value == '') f0c0.focus()"/>
+                <input id="f0c2" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f0c2.value == '') f0c1.focus()"/>
+                <input id="f0c3" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f0c3.value == '') f0c2.focus()"/>
+                <input id="f0c4" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f0c4.value == '') f0c3.focus()"/>
             </fieldset>
-            <fieldset id="fila1">
-                <input id="f1c0" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f1c1" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f1c2" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f1c3" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f1c4" type="text" minlength="1" maxlength="1" autocomplete="off">
+            <fieldset id="fila1" class="fieldset-wordle" disabled>
+                <input id="f1c0" class="input-wordle" maxlength="1"/>
+                <input id="f1c1" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f1c1.value == '') f1c0.focus()"/>
+                <input id="f1c2" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f1c2.value == '') f1c1.focus()"/>
+                <input id="f1c3" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f1c3.value == '') f1c2.focus()"/>
+                <input id="f1c4" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f1c4.value == '') f1c3.focus()"/>
             </fieldset>
-            <fieldset id="fila2">
-                <input id="f2c0" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f2c1" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f2c2" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f2c3" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f2c4" type="text" minlength="1" maxlength="1" autocomplete="off">
+            <fieldset id="fila2" class="fieldset-wordle" disabled>
+                <input id="f2c0" class="input-wordle" maxlength="1"/>
+                <input id="f2c1" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f2c1.value == '') f2c0.focus()"/>
+                <input id="f2c2" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f2c2.value == '') f2c1.focus()"/>
+                <input id="f2c3" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f2c3.value == '') f2c2.focus()"/>
+                <input id="f2c4" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f2c4.value == '') f2c3.focus()"/>
             </fieldset>
-            <fieldset id="fila3">
-                <input id="f3c0" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f3c1" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f3c2" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f3c3" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f3c4" type="text" minlength="1" maxlength="1" autocomplete="off">
+            <fieldset id="fila3" class="fieldset-wordle" disabled>
+                <input id="f3c0" class="input-wordle" maxlength="1"/>
+                <input id="f3c1" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f3c1.value == '') f3c0.focus()"/>
+                <input id="f3c2" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f3c2.value == '') f3c1.focus()"/>
+                <input id="f3c3" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f3c3.value == '') f3c2.focus()"/>
+                <input id="f3c4" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f3c4.value == '') f3c3.focus()"/>
             </fieldset>
-            <fieldset id="fila4">
-                <input id="f4c0" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f4c1" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f4c2" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f4c3" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f4c4" type="text" minlength="1" maxlength="1" autocomplete="off">
+            <fieldset id="fila4" class="fieldset-wordle" disabled>
+                <input id="f4c0" class="input-wordle" maxlength="1"/>
+                <input id="f4c1" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f4c1.value == '') f4c0.focus()"/>
+                <input id="f4c2" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f4c2.value == '') f4c1.focus()"/>
+                <input id="f4c3" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f4c3.value == '') f4c2.focus()"/>
+                <input id="f4c4" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f4c4.value == '') f4c3.focus()"/>
             </fieldset>
-            <fieldset id="fila5">
-                <input id="f5c0" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f5c1" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f5c2" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f5c3" type="text" minlength="1" maxlength="1" autocomplete="off" onkeyup="return tabular(this, this.maxLength)"/>
-                <input id="f5c4" type="text" minlength="1" maxlength="1" autocomplete="off">
+            <fieldset id="fila5" class="fieldset-wordle" disabled>
+                <input id="f5c0" class="input-wordle" maxlength="1"/>
+                <input id="f5c1" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f5c1.value == '') f5c0.focus()"/>
+                <input id="f5c2" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f5c2.value == '') f5c1.focus()"/>
+                <input id="f5c3" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f5c3.value == '') f5c2.focus()"/>
+                <input id="f5c4" class="input-wordle" maxlength="1" onkeydown="if (event.key === `Backspace` && f5c4.value == '') f5c3.focus()"/>
             </fieldset>
         </form>
+    </main>
         <!-- Modal -->
         <div id="modalPartidas" class="modal">
             <div class="modal_content">
                 <p class="modal_message">PARTIDAS</p>
                 <div id="table-wrapper">
                     <div id="table-scroll">
-                        <table id="tabla" border="1">
+                        <table id="tabla">
                             <thead>
                                 <tr>
                                     <th>NOMBRE</th>
-                                    <th>Fecha</th>
-                                    <th>Puntaje</th>
-                                    <th>Tiempo</th>
+                                    <th id="orden-por-fecha">FECHA</th>
+                                    <th id="orden-por-puntaje">PUNTAJE</th>
                                 </tr>
                             </thead>
-            
                             <tbody id="puntajes">
                             </tbody>
                         </table>
@@ -93,10 +102,8 @@
                 </div>
                 <p class="modal_close" id="close">CERRAR</p>
             </div>
+        </div>
 </div>
-    </main>
-    <aside>
-    </aside>
     <footer>
     </footer>
 </body>
