MASTER: Link a github

--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
     <header>
         <h1 class="header">EXAMEN FINAL LPPA</h1>
         <h2 class="header">
-            <a class="header" href="./index.html">WORDLE</a>
+            <a class="header" href="index.html">WORDLE</a>
         </h2>
+        <h6 class="header">
+        <a href="https://github.com/valen1984/wordle" target="_blank">Ir a github Valentín Alvarez</a>
+        </h6>
         <div id="buttons">
             <button id="nueva-partida" class="button-nav">Nueva Partida</button>
             <button id="cargar-partida" class="button-nav">Cargar Partida</button>
             <button id="guardar-partida" class="button-nav">Guardar Partida</button>
             <button id="volver-a-jugar-partida" class="button-nav">Volver a Jugar</button>
             <button id="ranking-partida" class="button-nav">Ranking</button>
-            <button id="contactanos" class="button-nav"><a href="/HTML/contacto.html">Contactanos</a></button>
+            <button id="contactanos" class="button-nav"><a href="contacto.html">Contactanos</a></button>
         </div>
         <form name="formulario" id="formulario-usuario">
             <div id="nombre-jugador">
