--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactanos</title>
-    <link rel="icon shortcut" href="../images/icono.png" sizes="3232">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="form.css">
@@ -16,7 +15,7 @@
         <div class="header">EXAMEN FINAL LPPA</div>
         <div class="header">WORDLE</div>
         <div id="buttons">
-            <button id="contactanos" class="button-nav"><a href="../index.html">VOLVER AL JUEGO</a></button>
+            <button id="contactanos" class="button-nav"><a href="./index.html">VOLVER AL JUEGO</a></button>
         </div>
     </header>
     <main>
