MASTER: Carga id Partida

--- a/index.html
+++ b/index.html
@@ -84,28 +84,28 @@
             </fieldset>
         </form>
     </main>
-        <!-- Modal -->
-        <div id="modalPartidas" class="modal">
-            <div class="modal_content">
-                <p class="modal_message">PARTIDAS</p>
-                <div id="table-wrapper">
-                    <div id="table-scroll">
-                        <table id="tabla">
-                            <thead>
-                                <tr>
-                                    <th>NOMBRE</th>
-                                    <th id="orden-por-fecha">FECHA</th>
-                                    <th id="orden-por-puntaje">PUNTAJE</th>
-                                </tr>
-                            </thead>
-                            <tbody id="puntajes">
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <p class="modal_close" id="close">CERRAR</p>
+ <!-- Modal -->
+<div id="modalPartidas" class="modal">
+    <div class="modal_content">
+        <p class="modal_message">PARTIDAS</p>
+        <div id="table-wrapper">
+            <div id="table-scroll">
+                <table id="tabla">
+                    <thead>
+                        <tr>
+                            <th id="numero-partida">PARTIDA</th>
+                            <th>NOMBRE</th>
+                            <th id="orden-por-fecha">FECHA</th>
+                            <th id="orden-por-puntaje">PUNTAJE ↓</th>
+                        </tr>
+                    </thead>
+                    <tbody id="puntajes">
+                    </tbody>
+                </table>
             </div>
         </div>
+        <p class="modal_close" id="close">CERRAR</p>
+    </div>
 </div>
     <footer>
     </footer>
